# ai-exam-grader

./: .env.example  .gitignore  README.md  appeal_demo.py  check_endpoint.py  clarify_demo.py  databricks.yml  diagnose.py  inspect_db.py  project_config_grader.yml  pyproject.toml  read_paper_demo.py  render.yaml  run_demo.py  sample_exam.json
.github/workflows/: cd.yml  ci.yml
databricks_job/: 01_setup_catalog.py  setup_free_edition.py
frontend/: index.html
notebook/: 01_setup_and_ingest.py  01_setup_and_injest.py  02_grade_with_delta.py  03_batch_grade.py  04_mlflow_tracking.py  05_monitoring.py  06_vector_search.py  07_serving.py  09_deploy_model.py  send_traffic.py
resources/: grading.job.yml  setup.job.yml
src/grader/: api.py  appeals.py  batch_grader.py  config.py  data_processor.py  databricks_grader.py  delta_store.py  grading.py  ingestion.py  models.py  project_config.py  retrieval.py  store.py  vision.py
tests/: conftest.py
tests/ab/: test_ab.py
tests/canary/: test_canary.py
tests/chaos/: test_chaos.py
tests/contract/: test_contract.py
tests/data/: test_data_quality.py
tests/fuzz/: test_fuzz.py
tests/integration/: test_integration.py
tests/monitoring/: test_monitoring.py
tests/mutation/: test_mutation_resistant.py
tests/performance/: test_performance.py
tests/property_based/: test_property_based.py
tests/registry/: test_model_registry.py
tests/regression/: test_regression.py
tests/serving/: test_serving_endpoint.py  test_smoke.py
tests/shadow/: test_shadow.py
tests/snapshot/: test_snapshot.py
tests/unit/: test_api.py  (+9 more)
