[project]
name = "ai-exam-grader"
description = "AI Exam-Grading System with a fairness and appeals loop"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
     "pandas>=2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0, <9",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["grader*"]

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"